--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,13 +1,12 @@
 
-
+#navbar{
+  position: sticky;
+}
 .navbar {
   background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   height: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
   font-size: 1.2rem;
-  position: sticky;
   top: 0;
   z-index: 999;
 }
@@ -18,8 +17,17 @@
   align-items: center;
   height: 80px;
   max-width: 1500px;
+  
 }
+.navbar-container button{
+  color: white;
+  border: 1px solid;
+  margin-bottom: 10px;
+}
+.navbar-container button:hover{
 
+  border-bottom: 5px solid white;
+}
 .navbar-logo {
   color: #fff;
   justify-self: start;
