--- a/src/Components/Herosection.css
+++ b/src/Components/Herosection.css
@@ -6,7 +6,7 @@ video {
   z-index: -1;
 }
 .hero-container {
-  /* background: url('/public/Images/img-home.jpg') center center/cover
+  /* background: url('/Images/img-home.jpg') center center/cover
     no-repeat; */
   height: 100vh;
   width: 100%;
