--- a/src/Pages/services.css
+++ b/src/Pages/services.css
@@ -4,6 +4,40 @@
    justify-content: center;
    align-items: center;
    gap: 20px;
-
 }
 
+.content::-webkit-scrollbar {
+    width: 3px;
+  }
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #c3c0c0; 
+  }
+   
+  /* Handle */
+  /* ::-webkit-scrollbar-thumb {
+    background: #888; 
+  } */
+  
+ 
+@media screen and (max-width: 800px){
+    .carditem{
+        display: grid;
+        grid-template-columns: auto auto;
+       justify-content: center;
+       align-items: center;
+       gap: 20px;
+    
+    }
+    @media screen and (max-width: 500px){
+        .carditem{
+            display: flex;
+          flex-direction: column;
+           justify-content: center;
+           align-items: center;
+           gap: 20px;
+        
+        }
+    }
+}
