--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
     align-items: center;
     justify-content: center;
     font-size: 3rem;
+    /* height: auto; */
   }
   
   .services {
@@ -22,7 +23,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     color: #fff;
-    font-size: 100px;
+    /* font-size: 100px; */
     position: relative;
     height: auto;
     padding: 100px;
@@ -34,7 +35,8 @@
     background-size: fill;
     background-repeat: no-repeat;
     color: #fff;
-    font-size: 100px;
+    /* font-size: 100px; */
+   
   }
   
   .sign-up {
@@ -43,7 +45,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     color: #fff;
-    font-size: 100px;
+    /* font-size: 100px; */
     
     
   }
